# PolyBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/sessions/: session_20260403_160335.jsonl  session_20260403_162146.jsonl
docs/: ARCHITECTURE.md  FIRST_RUN.md  REPLAY_AND_BACKTEST.md  RISK_MODEL.md  TUI_GUIDE.md
polymarket_bot/app/: __init__.py  cli.py  cli_health.py  cli_live.py  config.py  logger.py  main.py  orchestrator.py  runtime.py  runtime_control.py  v3_coordinator.py
polymarket_bot/app/analysis/: __init__.py  fair_value_engine.py  feature_builder.py  historical_analyzer.py  live_market_analyzer.py  market_scorer.py
polymarket_bot/app/backtest/: __init__.py  engine.py  metrics.py  simulator.py  v3_multi.py  v4_multi_engine.py
polymarket_bot/app/clients/: __init__.py  clob_client.py  data_client.py  gamma_client.py  http_common.py  polymarket_rest.py  polymarket_ws_market.py  polymarket_ws_user.py  rtds_client.py  spot_price_client.py
polymarket_bot/app/data/: __init__.py  cache.py  historical_store.py  market_store.py  replay.py  replay_engine.py  session_recorder.py
polymarket_bot/app/decision/: __init__.py  trade_gate.py
polymarket_bot/app/discovery/: __init__.py  market_filter.py  market_metadata.py  market_universe.py
tests/: conftest.py  test_backtest_multi.py  test_fair_value.py  test_lazy_imports.py  test_market_scorer.py  test_order_router_safety.py  test_paper_e2e.py  test_position_sizer.py  test_risk_engine.py  test_strategies.py  test_strategy_selector.py  test_trade_gate.py
(+82 files in other folders)
